			CHANGES IN ADEGENET VERSION 2.1.5

PARALLEL COMPUTATION

 - parallel computation defaults to `FALSE` from now on to avoid frustrating
   errors on windows machines.

DEPENDENCIS

 - spdep and adespatial have been moved to Suggests

			CHANGES IN ADEGENET VERSION 2.1.4

DOCUMENTATION

  - `snapclust()` documentation has been updated to be not so scary
	(@thibautjombart, #287)

			CHANGES IN ADEGENET VERSION 2.1.3

BUG FIX

  - `seppop()` correctly subsets genlight objects now. (@rdinnager, #270)
  
MISC

  - A bug in the `scaleGen()` example has been fixed and a minor spelling
    mistake was corrected (@courtiol, #273)
	- `find.clusters()` gains a missing parenthesis in the user prompt 
  	(@knausb, #283)
	- Warning messages for missing loci and individuals have been made clearer
	  (@zkamvar, #276)
	- DESCRIPTION file now uses Authors@R syntax

CRAN MAINTENANCE

  - `DNAbin2genind()` now checks for matrices by using `inherits()` instead of
	  `class(x) == "matrix"` (@zkamvar, #275)

			CHANGES IN ADEGENET VERSION 2.1.2

NEW MANAGEMENT

  - Zhian N. Kamvar is now the acting maintainer of the package.

NEW FEATURES

  - While creating genind from dataframe, it is now possible to skip
    the test of the ploidy that was added in 2.1.1 by passing the option
    check.ploidy = FALSE to the function df2genind. Thanks to Frederic Michaud
    for the fix. See https://github.com/thibautjombart/adegenet/issues/231 and
    https://github.com/thibautjombart/adegenet/pull/232 for details

  - `showmekittens()` has gained several new kittens thanks to @rdecamp

  - A new data set called `swallowtails` has been added to demonstrate the
    export to MVmapper functionality.
    
BUG FIXES

  - A bug where the number of alleles per locus was unaffected after subsetting
    a population with `drop = FALSE` has been fixed. Now, by default, the 
    `@loc.n.all` slot (accessor: `nAll()`) will store the number of observed